// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prepare handles async generator components 1`] = `
<div>
  <p>
    Component 
    42
  </p>
</div>
`;

exports[`prepare handles components 1`] = `
<div>
  <p>
    Component
  </p>
</div>
`;

exports[`prepare handles generator components 1`] = `
<div>
  <p>
    Initial
  </p>
</div>
`;

exports[`prepare handles jsx 1`] = `
<div>
  <p
    class="daniel"
  >
    Akta 
    <span>
      Number 5
    </span>
  </p>
</div>
`;

exports[`prepare takes nested arrays of elements 1`] = `
<div>
  <p>
    alpha
  </p>
  <p>
    beta
  </p>
  <p>
    zeta
  </p>
</div>
`;

exports[`prepare takes nested arrays of observables of arrays 1`] = `
<div>
  <div>
    daniel
  </div>
  <div>
    kalle
  </div>
  <p>
    zeta
  </p>
</div>
`;

exports[`prepare takes observable nodes and inserts them in the correct order: sub1 1`] = `
<div>
  alpha
  <p>
    sub1
  </p>
  
  <p>
    sub3
  </p>
</div>
`;

exports[`prepare takes observable nodes and inserts them in the correct order: sub1-empty 1`] = `
<div>
  alpha
  <span>
    sub1
  </span>
  
  <p>
    sub3
  </p>
</div>
`;

exports[`prepare takes observable nodes and inserts them in the correct order: sub2 1`] = `
<div>
  alpha
  <p>
    sub1
  </p>
  <p>
    sub2
  </p>
  <p>
    sub3
  </p>
</div>
`;

exports[`prepare takes observable nodes and inserts them in the correct order: sub2-empty 1`] = `
<div>
  alpha
  <p>
    sub1
  </p>
  
  <p>
    sub3
  </p>
</div>
`;

exports[`prepare takes observable nodes and inserts them in the correct order: sub3 1`] = `
<div>
  alpha
  
  
  <p>
    sub3
  </p>
</div>
`;

exports[`prepare takes observable nodes and inserts them in the correct order: sub3-empty 1`] = `
<div>
  alpha
  <span>
    sub1
  </span>
  
  
</div>
`;

exports[`prepare unsubscribes to removed elements: initial 1`] = `
<div>
  
</div>
`;

exports[`prepare unsubscribes to removed elements: with obs 1`] = `
<div>
  <p>
    alpha
  </p>
  Observable!
</div>
`;

exports[`prepare unsubscribes to removed elements: without obs 1`] = `
<div>
  <p>
    alpha
  </p>
</div>
`;
